--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
 
 #root {
   margin: 0 auto;
+  height: 100%
 }
 
 
@@ -118,4 +119,8 @@ body {
 
 .shadow-navbar {
   box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.03);
+}
+
+.separator {
+  color: #CCCCCC;
 }
