--- a/src/App.css
+++ b/src/App.css
@@ -44,11 +44,12 @@ body {
 }
 
 .text-h2 {
-  font-size: 24px;
+  font-size: 1.5rem;
   line-height: 24px;
   font-weight: 800;
   font-family: 'Abhaya Libre', sans-serif;
 }
+
 
 .text-h3 {
   font-size: 20px;
