changed navigation when editing to return to the previous filter

--- a/src/App.css
+++ b/src/App.css
@@ -125,3 +125,11 @@ body {
 .separator {
   color: #CCCCCC;
 }
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+.scrollbar-hide {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
